# damocles

./: .gitignore  DOCUMENTATION.in  LOG_FILE  Makefile  Makefile.am  Makefile.in  README.in  README.md  configure.ac  test.R  test.lisp  test.sh  test.sh.in
ezproxy/: .gitignore  README.in  README.md  notes.asc  step-0-sync-logs.sh
ezproxy/include/: main.h
ezproxy/src/: glob.cpp  step-1-clean-raw-logs.cpp
m4/: acinclude.m4  make-markdown.m4  make-readme.m4
scripts/: dlog.R
src/: dlog.c
